# hexagonal-architecture-python

./: pyproject.toml
src/application/: product.py  product_interface.py  status_enum.py
src/services/: product_persistence_service_interface.py  product_reader_service_interface.py  product_service.py  product_service_interface.py  product_writer_service_interface.py
tests/: product_service_test.py  product_test.py
