[tool.poetry]
name = "arquitetura-hexagonal"
version = "0.1.0"
description = ""
authors = ["Edilson Silva <eddysilva1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"